--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "qpilot-delivery-date": "^0.0.21",
+    "lit": "^3.1.1",
+    "material-symbols": "^0.14.6",
+    "qpilot-delivery-date": "^0.0.28",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
