--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "material-symbols": "^0.14.6",
-    "qpilot-delivery-date": "^0.0.63",
+    "ngx-json-viewer": "^3.2.1",
+    "qpilot-delivery-date": "^0.0.66",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
